manifests/devlab/drone/drone-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-controller
  namespace: drone
  labels:
    app: drone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone-controller
  template:
    metadata:
      labels:
        app: drone-controller
    spec:
      serviceAccountName: drone
      containers:
      - name: drone-controller
        image: drone/drone:2.0.4
        ports:
        - containerPort: 443
          name: webinterface
        volumeMounts:
        - name: ssl-keys
          mountPath: /etc/certs/drone.k8s.array21.dev/
          readOnly: true
      volumes:
      - name: ssl-keys
        secret:
          secretName: controller-drone-k8s-array21-tls
