manifests/devlab/drone/ephemeral-storage.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name:  ephemeral-storage
spec:
  rules:
  - name: ephemeral-storage
    match:
      resources:
        kinds:
        - Pod
        names:
        - "drone-*"
        namespaces:
        - drone    
    
    mutate:
      overlay:
        spec:
          containers:
          - (name): "*"
            resources:
              requests:
                ephemeral-storage: 512Mi
              limits:
                ephemeral-storage: 4Gi
